Checkin: Code Refactor by findBugs tool